[package]
name = "libpaprika"
version = "0.3.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]
edition = "2021"
license = "MIT"
description = "A library to read and generate Paprika recipe files and recipe collections."
repository = "https://github.com/the-kenny/libpaprika"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
libflate = "1.2.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
