[package]
name = "libpaprika"
version = "0.4.0"
authors = ["Moritz Ulrich <moritz@tarn-vedra.de>"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
description = "A library to read and generate Paprika recipe files and recipe collections."
repository = "https://github.com/the-kenny/libpaprika"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.3"
libflate = "1.2.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt", "macros"], optional = true }
reqwest = { version = "0.11.12", optional = true, features = ["json"] }
futures = { version = "0.3.25", optional = true }
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.1"

[features]
default = ["api"]
api = ["dep:tokio", "dep:reqwest", "dep:futures"]

[[example]]
name = "api"
required-features = ["api"]
